# 2024-2025-project-3-quickest-path-team-4

./: .gitignore  CONTRIBUTING.md  Dijkstra.cpp  README.md  client  client.cpp  client_deprecated.cpp  loading.cpp  main.cpp  preprocess.cpp  project_charter.md  server.cpp
.github/ISSUE_TEMPLATE/: bug-report--document---part-.md
functionalSpecifications/: functionalSpecifications.md
management/: managementArtifacts.md  postMortem.md  projectCharter.md
management/weeklyReports/: globalReport.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
qualityAssurance/: testCases.md  testPlan.md  testResults.md
qualityAssurance/documents/: testCases.md  testResults.md
qualityAssurance/testFile/: dataTest.csv  equalPathsGraph.csv  notFullyConnected.csv  wrongType.csv
qualityAssurance/testing/: DijkstraV1.cpp  algo.cpp  dataVerif.cpp  dijkstraV2.cpp  generateCases.cpp  graph_100.csv  longestShortestPath.cpp  sampleHundred.cpp  testV4.cpp
src/: beast_example  main.cpp  server  server.cpp
src/algorithm/: Bidirectional_Astar.cpp  Bidirectional_Astar.h  (+16 more)
src/road_runner/: CMakeLists.txt
src/road_runner/boost_1_82_0/: b2
src/road_runner/include/: Bidirectional_Astar.h  graph_data.h  graph_loader.h  loading.h
src/road_runner/output/: path_20250206_003743.json  path_20250206_003844.json  path_20250206_113254.json  path_20250206_115842.json
src/road_runner/src/: Bidirectional_Astar.cpp  graph_loader.cpp  loading.cpp  main.cpp
technicalSpecification/: namingConventions.md  technicalSpecifications.md
technicalSpecifications/: technicalSpecifications.md
(+221 files in other folders)
